//
//  CustomAssisbilityLabel.swift
//  BudgetOS
//
//  Created by Adebayo  Ogunmuyiwa on 2020-12-07.
//

import UIKit

struct CustomAssisbilityLabel {

    struct Label {
        static let homeAddBugetAddTransaction = "homeAddBugetAddTransaction"
        static let AddCategory_baseCardView_categoryNameInput = "AddCategory_baseCardView_categoryNameInput"
        static let AddCategory_baseCardView_budgetInput = "AddCategory_baseCardView_budgetInput"
    }
    struct homepage {
        static let  showfullBudegt  = "showfullBudegt"
        static let goBack = "homepage_goBack"
        static let showfullTransactions = "homepage_showfullTransactions"
    }
    
    struct budgetList {
        static let goBack = "Budgets"
    }
    
    struct editTransaction {
        static let goBack = "editTransaction_goBack"
    }
}
