...
        return AmountInput
    }()
    
    lazy var addTransaction: UIButton = {
        let addTransaction = UIButton()
        addTransaction.setImage(CustomProperties.shared.tintedColorImage, for: .normal)
        addTransaction.setTitle("Add transaction", for: .normal)
        addTransaction.addTarget(self, action: #selector(Addtransaction), for: .touchUpInside)
        addTransaction.setTitleColor(CustomProperties.shared.animationColor, for: .normal)
        self.addSubview(addTransaction)
        addTransaction.translatesAutoresizingMaskIntoConstraints = false
        addTransaction.topAnchor(AmountInput.bottomAnchor, 10)
        addTransaction.rightAnchor(self.rightAnchor, 0)
...
